--- a/packages/new_release.yaml
+++ b/packages/new_release.yaml
@@ -6,16 +6,9 @@
 #        entity_id: binary_sensor.updater
 #        to: 'on'
 #    action:
-#      - service: notify.slack
-#        data_template:
-#          target: ["#alerts-david"]
-#          message: "New Home Assistant  {{ state_attr('binary_sensor.updater', 'newest_version') }}  is now available."
-#          data:
-#            icon:
-#            username: Home Assistant
-#            blocks_template:
-#              - type: section
-#                text:
-#                  type: mrkdwn
-#                  text: >
-#                    New Home Assistant  {{ state_attr('binary_sensor.updater', 'newest_version') }}  is now available.
+      # - service: script.alert
+      #   data:
+      #     target: 'alerts-david'
+      #     icon: ':rotating_light: '
+      #     object: 'Home Assistant'
+      #     message: "New Home Assistant  {{ state_attr('binary_sensor.updater', 'newest_version') }}  is now available."
