--- a/packages/notifications/camera_notifications.yaml
+++ b/packages/notifications/camera_notifications.yaml
@@ -1,3 +1,4 @@
+---
 input_boolean:
   camera_alerts:
     name: Camera Alerts
@@ -17,19 +18,14 @@ automation:
       - service: timer.start
         data:
           entity_id: timer.camera_alerts_disabled
-      - service: notify.slack
-        data_template:
-          target: ["#alerts"]
-          data:
-            icon: ":movie_camera:"
-            username: "Camera Alert"
-            blocks_template:
-              - type: section
-                text:
-                  type: mrkdwn
-                  text: >
-                    Camera Alerts disabled for: {{ states.timer.camera_alerts_disabled.attributes.duration|string }}
+      - service: script.alert
+        data:
+          target: 'alerts'
+          icon: ':video_camera: '
+          object: 'Camera'
+          camera: 'camera.front_camera'
           message: "Camera Alerts disabled for: {{ states.timer.camera_alerts_disabled.attributes.duration|string }}"
+
   # timer ended, turn camera alerts on
   - alias: Turn camera alerts back on
     trigger:
@@ -79,27 +75,11 @@ automation:
         for:
           seconds: 30
     action:
-      - service: script.notify_front_camera_alert
-      - delay: '00:00:10' # seconds
-
-script:
-  notify_front_camera_alert:
-    sequence:
-      - service: camera.snapshot
-        data_template:
-          entity_id: camera.front_camera
-          filename: "/config/www/cam_captures/front_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
-      - service: system_log.write
-        data_template:
-          message: "Front Camera Capture @ /config/www/cam_captures/front_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
-          level: debug
-      - delay:
-          seconds: 4
-      - service: notify.slack
-        data_template:
-          target: ["#alerts"]
+      - service: script.alert
+        data:
+          target: 'alerts'
+          icon: ':video_camera: '
+          object: 'Camera'
+          camera: 'camera.front_camera'
           message: "Motion detected at Front Beam"
-          data:
-            file:
-              path: "/config/www/cam_captures/front_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
-              ### path is now required as of 0.113.0 see https://github.com/home-assistant/home-assistant.io/pull/13860/files
+      - delay: '00:00:10' # seconds
