--- a/packages/vacuum.yaml
+++ b/packages/vacuum.yaml
@@ -131,21 +131,13 @@ automation:
       #  to: 'returning'
     condition: []
     action:
-      - service: notify.slack
-        data_template:
-          data:
-            icon: ":robot_face:"
-            username: "Vacuum Robot"
-            blocks_template:
-              - type: section
-                text:
-                  type: mrkdwn
-                  text: >
-                    Vacuum Robot is now {{ states.vacuum.rockrobo.state }}
-          title: 'Vacuum Robot'
-          target: ["#logs"]
-          message: >
-            Vacuum Robot is now {{ states.vacuum.rockrobo.state }}
+      - service: script.alert
+        data:
+          target: 'logs'
+          icon: ':robot_face: '
+          object: 'Vacuum Robot'
+          #camera: 'camera.rockrobo_map'
+          message: "Vacuum Robot is now {{ states.vacuum.rockrobo.state }}"
 
   ### Auto-resume after pause
   - alias: Vacuum Auto-resume after pause timer
@@ -187,21 +179,13 @@ automation:
       #  value_template: >-
       #    {{ trigger.platform == 'state' and trigger.from_state.state|default('') != '' }}
     action:
-      - service: notify.slack
-        data_template:
-          data:
-            icon: ":robot_face:"
-            username: "Vacuum Robot"
-            blocks_template:
-              - type: section
-                text:
-                  type: mrkdwn
-                  text: >
-                    Vacuum Robot Error: {{ states.sensor.vacuum_error_code.state }} {{ states.sensor.vacuum_error_message.state }}
-          title: 'Vacuum Robot Error'
-          target: ["#logs"]
-          message: >
-            Vacuum Robot Error: {{ states.sensor.vacuum_error_code.state }} {{ states.sensor.vacuum_error_message.state }}
+      - service: script.alert
+        data:
+          target: 'logs'
+          icon: ':robot_face: '
+          object: 'Vacuum Robot'
+          #camera: 'camera.rockrobo_map'
+          message: "Vacuum Robot Error: {{ states.sensor.vacuum_error_code.state }} {{ states.sensor.vacuum_error_message.state }}"
 
   ### Notify when failed to docked after returning
   - alias: Notify when Robot failed to dock
@@ -213,21 +197,13 @@ automation:
         to: 'idle'
     condition: []
     action:
-      - service: notify.slack
-        data_template:
-          data:
-            icon: ":robot_face:"
-            username: "Vacuum Robot"
-            blocks_template:
-              - type: section
-                text:
-                  type: mrkdwn
-                  text: >
-                    Vacuum Robot failed to dock!
-          title: 'Vacuum Robot'
-          target: ["#logs"]
-          message: >
-            Vacuum Robot failed to dock!
+      - service: script.alert
+        data:
+          target: 'logs'
+          icon: ':robot_face: '
+          object: 'Vacuum Robot'
+          #camera: 'camera.rockrobo_map'
+          message: "Vacuum Robot failed to dock!"
 
   ### Notify error state
   - alias: Notify when Robot State Error
@@ -244,22 +220,15 @@ automation:
     #    value_template: >-
     #      {{ trigger.from_state.state not in ['unknown','unavailable','none'] }}
     action:
-      - service: notify.slack
-        data_template:
-          data:
-            icon: ":robot_face:"
-            username: "Vacuum Robot"
-            blocks_template:
-              - type: section
-                text:
-                  type: mrkdwn
-                  text: >
-                    Vacuum Robot Error - Check out why!
-                    From state: {{ trigger.from_state.state }}
-          title: 'Vacuum Robot'
-          target: ["#logs"]
+      - service: script.alert
+        data:
+          target: 'logs'
+          icon: ':robot_face: '
+          object: 'Vacuum Robot'
+          #camera: 'camera.rockrobo_map'
           message: >
             Vacuum Robot Error - Check out why!
+            From state: {{ trigger.from_state.state }}
 
   ### Notify last clean results
   - alias: Notify when Robot State Change
@@ -277,35 +246,10 @@ automation:
     #    value_template: >-
     #      {{ trigger.from_state.state not in ['unknown','unavailable','none'] }}
     action:
-      - service: script.notify_robot_cleaning_stats
-
-script:
-  ### Notify last clean results
-  notify_robot_cleaning_stats:
-    sequence:
-      - service: camera.snapshot
-        data_template:
-          entity_id: camera.rockrobo_map
-          filename: "/config/www/cam_captures/rockrobo_map_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
-      - delay:
-          seconds: 5
-      - service: notify.slack
-        data_template:
-          target: ["#logs"]
-          message: >
-            {{ states.sensor.vacuum_last_clean_stats.state }}
-          data:
-            icon: ":robot_face:"
-            blocks_template:
-              - type: section
-                text:
-                  type: mrkdwn
-                  text: >
-                    {{ states.sensor.vacuum_last_clean_stats.state }}
-      - service: notify.slack
-        data_template:
-          target: ["#logs"]
-          data:
-            file:
-              path: "/config/www/cam_captures/rockrobo_map_{{ now ().year }}_{{ now ().month }}_{{ now ().day }}_{{ now ().hour }}_{{ now ().minute }}.jpg"
-              ### path is now required as of 0.113.0 see https://github.com/home-assistant/home-assistant.io/pull/13860/files
+      - service: script.alert
+        data:
+          target: 'logs'
+          icon: ':robot_face: '
+          object: 'Vacuum Robot'
+          camera: 'camera.rockrobo_map'
+          message: "{{ states.sensor.vacuum_last_clean_stats.state }}"
